CRUD roles, remove darkmode
